--- a/Frameworks/Nursery.framework/Versions/C/Resources/Info.plist
+++ b/Frameworks/Nursery.framework/Versions/C/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>14F27</string>
+	<string>17A405</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>ja_JP</string>
 	<key>CFBundleExecutable</key>
@@ -17,25 +17,29 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1</string>
+	<string>1.0.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleSupportedPlatforms</key>
+	<array>
+		<string>MacOSX</string>
+	</array>
 	<key>CFBundleVersion</key>
-	<string>3</string>
+	<string>5</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>6E35b</string>
+	<string>9A235</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>14D125</string>
+	<string>17A360</string>
 	<key>DTSDKName</key>
-	<string>macosx10.10</string>
+	<string>macosx10.13</string>
 	<key>DTXcode</key>
-	<string>0640</string>
+	<string>0900</string>
 	<key>DTXcodeBuild</key>
-	<string>6E35b</string>
+	<string>9A235</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2014年 PEDOPHILIA. All rights reserved.</string>
 </dict>
