Fixed an issue where the app can not open a bookmark in a web browser. Update Nursery.framework.

--- a/Bookmarks/Bookmarks-Info.plist
+++ b/Bookmarks/Bookmarks-Info.plist
@@ -135,5 +135,7 @@
 			</dict>
 		</dict>
 	</array>
+    <key>NSAppleEventsUsageDescription</key>
+    <string>Please give Bookmarks access to Web browser via Apple Script.</string>
 </dict>
 </plist>
